[gd_scene load_steps=2 format=3 uid="uid://wuj5utqi2n8u"]

[ext_resource type="Script" path="res://menu/start_menu.gd" id="1_658oo"]

[node name="StartMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_658oo")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="NickNameTextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -27.0
offset_right = 192.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Введите имя
"

[node name="ColorSelect" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -27.0
offset_right = -112.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true
auto_height = true
item_count = 4
icon_mode = 0
item_0/text = "White"
item_1/text = "Black"
item_2/text = "Red"
item_3/text = "Yellow"

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 43.0
offset_right = 192.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
text = "Подтвердить"

[connection signal="pressed" from="StartGameButton" to="." method="_on_button_pressed"]
